# MathExpressions-Solver

./: .gitignore  CMakeLists.txt  README.md  Variable Naming Guide.md  build.bat  build_exe.bat  git_push.sh
src/: Utils.h  main.cpp
src/core/: AppLogger.cpp  AppLogger.h  FilenameFormatter.cpp  FilenameFormatter.h  LogFileManager.cpp  LogFileManager.h
src/core/constants/: ExpressionConstants.h  ExpressionTokens.h
src/core/input/: InputExpressionLine.cpp  InputExpressionLine.h  InputExpressionSpec.cpp  InputExpressionSpec.h  InputSession.cpp  InputSession.h  InputUtils.cpp  InputUtils.h
src/core/logging/: AppLogger.cpp  AppLogger.h  ConsoleColor.cpp  ConsoleColor.h  FilenameFormatter.cpp  FilenameFormatter.h  LogColor.h  LogFileManager.cpp  LogFileManager.h  LogLevel.h
src/logic/: CandidateGenerator.cpp  CandidateGenerator.h  Constraint.cpp  Constraint.h  ConstraintUtils.cpp  ConstraintUtils.h  ExpressionValidator.cpp  ExpressionValidator.h  GameRoundState.h  RoundManager.cpp  RoundManager.h  RoundRecord.h
src/util/: ConsoleUtils.cpp  ConsoleUtils.h  Utils.h
tests/: run_tests.bat  test_constraints.cpp  test_run.bat  test_run.cpp
